fix: fix overflow bugs in JobLinks page

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -15,7 +15,8 @@ body {
   background-color: #1e1e1e;
   font-family: Arial, Helvetica, 'Helvetica Neue', serif;
   font-size: 12px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow: auto;
   margin: 0;
   padding: 0;
 }
