--- a/app/components/JobCreate.css
+++ b/app/components/JobCreate.css
@@ -1,7 +1,8 @@
 .form {
   width: 90%;
   max-width: 600px;
-  margin: 30px auto;
+  padding: 30px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 15px;
