--- a/app/components/JobLinks.css
+++ b/app/components/JobLinks.css
@@ -1,7 +1,8 @@
 .links-container {
   width: 90%;
   max-width: 1200px;
-  margin: 30px auto;
+  padding: 30px 0;
+  margin: 0 auto;
 }
 
 .table-links {
