--- a/app/components/Settings.css
+++ b/app/components/Settings.css
@@ -1,7 +1,8 @@
 .form {
   width: 90%;
   max-width: 800px;
-  margin: 30px auto;
+  padding: 30px 0;
+  margin: 0 auto;
 }
 
 .form-control {
